unpackaged/objects/Travel_Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Travel Insurance</relationshipLabel>
        <relationshipName>Travel_Insurances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coverage_Details__c</fullName>
        <label>Coverage Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Coverage_Period__c</fullName>
        <label>Coverage Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Travel Insurance</label>
    <nameField>
        <label>Insurance Cert No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Insurances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>